# hackthon2-phase2

./: .dockerignore  .env  .gitignore  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  api_server.py  docker-compose.yaml  init_db.py  pyproject.toml  requirements.txt  values.yaml
data/: tasks.json
frontend/: next.config.js  package-lock.json  package.json
frontend/components/: AuthForm.tsx  Chat.tsx  ConfirmModal.tsx  TaskForm.tsx  TaskItem.tsx  TaskList.tsx
frontend/lib/: api.ts  auth-context.tsx  better-auth.ts  chat-api.ts
frontend/pages/: _app.tsx  _document.tsx  index.tsx  login.tsx  logout.tsx  signup.tsx
frontend/styles/: globals.css
frontend/types/: task.ts
k8s/: README.md  deploy-minikube.sh  kubectl-ai-config.yaml  undeploy-minikube.sh
k8s/helm/: Chart.yaml  NOTES.txt  values-minikube.yaml  values-secrets.yaml  values.yaml
k8s/helm/templates/: backend-deployment.yaml  backend-service.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  secrets.yaml
src/: agent.py  api.py  auth.py  cli.py  db.py  mcp_server.py  models.py  services.py  storage.py
src/database/: models.py
