[project]
name = "hackathon-todo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlmodel",
    "psycopg[binary]",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "email-validator",
    "openai>=1.0.0",
    "mcp>=1.0.0",
]
